--- a/pages/about.html
+++ b/pages/about.html
@@ -1,60 +1,59 @@
-<div class="section">
+<section>
     <h1>What</h1>
-    <p class="sub-section">
-        We are a Cali-based Japanese streetwear brand with inspiration from traditional Japanese aesthetics mixed with a contemporary Bay Area/LA attitude.
-        We’re here to give you streetwear that’s truly one of a kind. One to be jealous of.
-    </p>
-</div>
+    <div class="sub-section">
+        <p>
+            We are a Cali-based Japanese streetwear brand with inspiration from traditional Japanese aesthetics mixed with a contemporary Bay Area/LA attitude.
+            We’re here to give you streetwear that’s truly one of a kind.
+            One to be jealous of.
+        </p>
+    </div>
+</section>
 
-<div class="section">
+<section>
     <h1>Tradition</h1>
-    <p class="sub-section">
-        We find our identity in Japanese folklore and the story of the Hannya—a beautiful women twisted into a <em>kijo</em> (demoness) from betrayal or Jealousy.
-        It is from this story we derive and infuse the dangerous & artistic beauty found in our designs.
-        Displaying the hannya mask, the mask of the kijo often used in traditional <em>Noh</em> plays, is rumored to have the ability to ward off evil but also ties into the buddhist concept of true wisdom.
-    </p>
-    <p class="sub-section">
-        An aesthetic of betrayal, beauty, and jealousy.
-    </p>
-    <p class="sub-section">
-        For more on the Hannya check out the traditional works of: <em>Aoi no Ue</em>, <em>Kurozuka</em>, <em>Dojo-ji</em>.
-    </p>
-</div>
+    <div class="sub-section">
+        <p>
+            We find our identity in Japanese folklore and the story of the Hannya—a beautiful women twisted into a <i>kijo</i> (demoness) from betrayal or Jealousy.
+            It is from this story we derive and infuse the dangerous & artistic beauty found in our designs.
+            Displaying the hannya mask, the mask of the <i>kijo</i> often used in traditional <i>Noh</i> plays, is rumored to have the ability to ward off evil but also ties into the buddhist concept of true wisdom.
+        </p>
+        <p>
+            An aesthetic of betrayal, beauty, and jealousy.
+        </p>
+        <p>
+            For more on the Hannya check out the traditional works of: <i>Aoi no Ue</i>, <i>Kurozuka</i>, <i>Dojo-ji</i>.
+        </p>
+    </div>
+</section>
 
-<div class="section">
+<section>
     <h1>Who</h1>
-    <p class="sub-section">
+    <div class="sub-section with-img">
         <img src="img/home/home-5.jpg">
-    </p>
-    <h1>Co-founders</h1>
-    <p class="sub-section" style="text-align: center;">
-        Riifu A. &nbsp;&&nbsp; Ryo F.
-    </p>
-</div>
+    </div>
+    <h1>Co-founders:</h1>
+    <div class="sub-section">
+        <p>
+            <a class="black">Riifu A.</a> & <a class="black">Ryo F.</a>
+        </p>
+    </div>
+</section>
 
-<div class="section">
-    <h1>The Team / Special Thanks</h1>
-    <p class="sub-section">
-        <table><tr>
-            <td>Web Design:</td>
-            <td>
-                <a href="https://nuotsu.github.io/" target="_blank">Mitchell Christ (nuotsu)</a>
-            </td>
+<section>
+    <h1>The Team / Special Thank</h1>
+    <div class="sub-section">
+        <table class="team"><tr>
+            <td>Webmaster:</td>
+            <td><a>Mitchell Christ (<i>nuotsu</i>)</a></td>
         </tr><tr>
             <td>Photo Leads:</td>
             <td>
-                <a href="https://www.flickr.com/photos/wenchance/" target="_blank">Chance Wen</a>,
-                <a href="" target="_blank">Andy Yen</a>
+                <a>Chance Wen</a> &
+                <a>Andy Yen</a>
             </td>
         </tr><tr>
-            <td>Logo Design:</td>
-            <td>
-                <a href="http://fadingshoreline.tumblr.com" target="_blank">Masako Kamoto</a>
-            </td>
+            <td>Log Design:</td>
+            <td><a>Masako Kamoto</a></td>
         </tr></table>
-    </p>
-</div>
-
-<script>
-    appendFooter()
-</script>
+    </div>
+</section>
