--- a/pages/legal.html
+++ b/pages/legal.html
@@ -1,6 +1,6 @@
-<div class="section overflow">
+<section>
     <h1>Shipping & Return Policy</h1>
-    <div class="overflow"><div class="sub-section">
+    <div class="sub-section overflow">
         <h3>Shipping</h3>
         <p>
             All items will be shipped within one week of ordering with the exception of the Kamon Collection.
@@ -14,8 +14,6 @@
         </p><p>
             We will put in reasonable effort in helping identify disruptions in supply chain and will notify you accordingly.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Return</h3>
         <p>
             <b>All sales are final.</b>
@@ -27,12 +25,12 @@
         </p><p>
             If in the case a replacement has been agreed to and a replacement is not available, we will refund the full purchase price of the item.
         </p>
-    </div></div>
-</div>
+    </div>
+</section>
 
-<div class="section overflow">
+<section>
     <h1>Privacy Policy</h1>
-    <div class="overflow"><div class="sub-section">
+    <div class="sub-section overflow">
         <h3>Section 1 — What do we do with your information?</h3>
         <p>
             When you purchase something from our store, as part of the buying and selling process, we collect the personal information you give us such as (but not limited too) your name, address and email address.
@@ -43,8 +41,6 @@
             With your permission, we may send you emails about our store, new products and other updates.
             This primarily applies to those who buy or subscribe to our product or website.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 2 — Consent</h3>
         <p>
             <em>What is “my” consent as a customer?</em>
@@ -57,15 +53,10 @@
         </p><p>
             If after you opt-in, you change your mind, you may withdraw your consent for us to contact you, for the continued collection, use or disclosure of your information, at anytime, by contacting us at <a href="mailto:hnyadesign@gmail.com">hnyadesign@gmail.com</a>.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 3 — Disclosure</h3>
         <p>
             We may disclose your personal information if we are required by law to do so or if you violate our Terms of Service.
-        </p>
-    </div>
-    <div class="sub-section">
-        <h3>Section 4 — PayPal</h3>
+        </p><h3>Section 4 — PayPal</h3>
         <p>
             Our store is hosted on PayPal.
             They provide us with the online e-commerce platform that allows us to sell our products and services to you.
@@ -86,8 +77,6 @@
         </p><p>
             For more insight, you may also want to read <a href="https://www.paypal.com/us/webapps/mpp/ua/legalhub-full" target="_blank">PayPal’s Legal agreements</a>.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 5 — Third-Party Services</h3>
         <p>
             In general, the third-party providers used by us will only collect, use and disclose your information to the extent necessary to allow them to perform the services they provide to us.
@@ -109,8 +98,6 @@
             Google analytics (if applicable):
             Our store may use Google Analytics to help us learn about who visits our site and what pages are being looked at.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 6 — Security</h3>
         <p>
             To protect your personal information, we take reasonable precautions and follow industry best practices to make sure it is not inappropriately lost, misused, accessed, disclosed, altered or destroyed.
@@ -118,14 +105,10 @@
             If you provide us with your credit card information, the information is encrypted using secure socket layer technology (SSL) and stored with a AES-256 encryption.
             Although no method of transmission over the Internet or electronic storage is 100% secure, we follow all PCI-DSS requirements and implement additional generally accepted industry standards.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 7 — Age of Consent</h3>
         <p>
             By using this site, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 8 — Changes to this Privacy Policy</h3>
         <p>
             We reserve the right to modify this privacy policy at any time, so please review it frequently.
@@ -135,18 +118,16 @@
         </p><p>
             If our store is acquired or merged with another company, your information may be transferred to the new owners so that we may continue to sell products to you.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Questions & Contact Information</h3>
         <p>
             If you would like to: access, correct, amend or delete any personal information we have about you, register a complaint, or simply want more information contact our Privacy Compliance Officer at <a href="mailto:hnyadesign@gmail.com">hnyadesign@gmail.com</a>.
         </p>
-    </div></div>
-</div>
+    </div>
+</section>
 
-<div class="section overflow">
+<section>
     <h1>Terms & Conditions</h1>
-    <div class="overflow"><div class="sub-section">
+    <div class="sub-section overflow">
         <h3>Overview</h3>
         <p>
             This website is operated by HNYA also known as <em>HannyaDesign</em>.
@@ -171,8 +152,6 @@
             Our store uses PayPal to provide us with the online e-commerce platform that allows us to sell our products and services to you.
             Purchasing of a product through PayPal subjects you to PayPal’s terms and services.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 1 — Online Store Terms</h3>
         <p>
             By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site and purchase its products.
@@ -183,8 +162,6 @@
         </p><p>
             A breach or violation of any of the Terms will result in termination on you access to current and future services/products until otherwise notified.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 2 — General Conditions</h3>
         <p>
             We reserve the right to refuse service to anyone for any reason at any time.
@@ -196,8 +173,6 @@
         </p><p>
             The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 3 — Accuracy, Completeness & Timeliness of Information</h3>
         <p>
             We are not responsible if information made available on this site is not accurate, complete or current.
@@ -208,8 +183,6 @@
             We reserve the right to modify the contents of this site at any time, but we have no obligation to update any information on our site.
             You agree that it is your responsibility to monitor changes to our site.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 4 — Modifications to the Service and Srices</h3>
         <p>
             Prices for our products are subject to change without notice.
@@ -218,8 +191,6 @@
         </p><p>
             We shall not be liable to you or to any third-party for any modification, price change, suspension or discontinuance of the Service.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 5 — Products or Services (If Applicable)</h3>
         <p>
             Certain products or services may be available exclusively online through the website.
@@ -239,8 +210,6 @@
         </p><p>
             We do not guarantee that the quality of any products, services, information, or other material purchased or obtained by you will meet your expectations, or that any errors in the Service will be corrected.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 6 — Accuracy of Billing and Account Information</h3>
         <p>
             We reserve the right to refuse any order you place with us.
@@ -254,8 +223,6 @@
         </p><p>
             For more detail, please review our <a href="#contact?shipping">Returns Policy</a>.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 7 — Optional Tools</h3>
         <p>
             We may provide you with access to third-party tools over which we neither monitor nor have any control nor input.
@@ -268,8 +235,6 @@
             We may also, in the future, offer new services and/or features through the website (including, the release of new tools and resources).
             Such new features and/or services shall also be subject to these Terms of Service.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 8 — Third-Party Links (If Applicable)</h3>
         <p>
             Certain content, products and services available via our Service may include materials from third-parties.
@@ -280,8 +245,6 @@
             We are not liable for any harm or damages related to the purchase or use of goods, services, resources, content, or any other transactions made in connection with any third-party websites.
             Please review carefully the third-party's policies and practices and make sure you understand them before you engage in any transaction. Complaints, claims, concerns, or questions regarding third-party products should be directed to the third-party.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 9 — User Comments, Feedback & Other Submissions</h3>
         <p>
             If, at our request, you send certain specific submissions (for example contest entries) or without a request from us you send creative ideas, suggestions, proposals, plans, or other materials, whether online, by email, by postal mail, or otherwise (collectively, 'comments'), you agree that we may, at any time, without restriction, edit, copy, publish, distribute, translate and otherwise use in any medium any comments that you forward to us.
@@ -295,15 +258,11 @@
             You are solely responsible for any comments you make and their accuracy.
             We take no responsibility and assume no liability for any comments posted by you or any third-party.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 10 — Personal Information</h3>
         <p>
             Your submission of personal information through the store is governed by our Privacy Policy.
             Please refer to our <a href="#contact?privacy">Privacy Policy</a>.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 11 — Errors, Inaccuracies and Omissions</h3>
         <p>
             Occasionally there may be information on our site or in the Service that contains typographical errors, inaccuracies or omissions that may relate to product descriptions, pricing, promotions, offers, product shipping charges, transit times and availability.
@@ -311,8 +270,6 @@
         </p><p>
             We undertake no obligation to update, amend or clarify information in the Service or on any related website, including without limitation, pricing information, except as required by law. No specified update or refresh date applied in the Service or on any related website, should be taken to indicate that all information in the Service or on any related website has been modified or updated.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 12 — Prohibited Uses</h3>
         <p>
             In addition to other prohibitions as set forth in the Terms of Service, you are prohibited from using the site or its content:
@@ -329,8 +286,6 @@
             (k) to interfere with or circumvent the security features of the Service or any related website, other websites, or the Internet.
             We reserve the right to terminate your use of the Service or any related website for violating any of the prohibited uses.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 13 — Disclaimer of Warranties; Limitation of Liability</h3>
         <p>
             We do not guarantee, represent or warrant that your use of our service will be uninterrupted, timely, secure or error-free.
@@ -345,20 +300,14 @@
             In no case shall HNYA, our owners, directors, officers, employees, affiliates, agents, contractors, interns, suppliers, service providers or licensors be liable for any injury, loss, claim, or any direct, indirect, incidental, punitive, special, or consequential damages of any kind, including, without limitation lost profits, lost revenue, lost savings, loss of data, replacement costs, or any similar damages, whether based in contract, tort (including negligence), strict liability or otherwise, arising from your use of any of the service or any products procured using the service, or for any other claim related in any way to your use of the service or any product, including, but not limited to, any errors or omissions in any content, or any loss or damage of any kind incurred as a result of the use of the service or any content (or product) posted, transmitted, or otherwise made available via the service, even if advised of their possibility.
             Because some states or jurisdictions do not allow the exclusion or the limitation of liability for consequential or incidental damages, in such states or jurisdictions, our liability shall be limited to the maximum extent permitted by law.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 14 — Indemnification</h3>
         <p>
             You agree to indemnify, defend and hold harmless HNYA and our parent, subsidiaries, affiliates, partners, officers, directors, agents, contractors, licensors, service providers, subcontractors, suppliers, interns and employees, harmless from any claim or demand, and owners, including reasonable attorneys’ fees, made by any third-party due to or arising out of your breach of these Terms of Service or the documents they incorporate by reference, or your violation of any law or the rights of a third-party.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 15 — Severability</h3>
         <p>
             In the event that any provision of these Terms of Service is determined to be unlawful, void or unenforceable, such provision shall nonetheless be enforceable to the fullest extent permitted by applicable law, and the unenforceable portion shall be deemed to be severed from these Terms of Service, such determination shall not affect the validity and enforceability of any other remaining provisions.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 16 — Termination</h3>
         <p>
             The obligations and liabilities of the parties incurred prior to the termination date shall survive the termination of this agreement for all purposes.
@@ -368,8 +317,6 @@
         </p><p>
             If in our sole judgment you fail, or we suspect that you have failed, to comply with any term or provision of these Terms of Service, we also may terminate this agreement at any time without notice and you will remain liable for all amounts due up to and including the date of termination; and/or accordingly may deny you access to our Services (or any part thereof).
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 17 — Entire Agreement</h3>
         <p>
             The failure of us to exercise or enforce any right or provision of these Terms of Service shall not constitute a waiver of such right or provision.
@@ -378,14 +325,10 @@
         </p><p>
             Any ambiguities in the interpretation of these Terms of Service shall not be construed against the drafting party.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 18 — Governing Law</h3>
         <p>
             These Terms of Service and any separate agreements whereby we provide you Services shall be governed by and construed in accordance with the laws of California, USA.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 19 — Changes to Terms of Service</h3>
         <p>
             You can review the most current version of the Terms of Service at any time at this page.
@@ -394,15 +337,9 @@
             It is your responsibility to check our website periodically for changes.
             Your continued use of or access to our website or the Service following the posting of any changes to these Terms of Service constitutes acceptance of those changes.
         </p>
-    </div>
-    <div class="sub-section">
         <h3>Section 20 — Contact Information</h3>
         <p>
             Questions about the Terms of Service should be sent to us at <a href="mailto:hnyadesign@gmail.com">hnyadesign@gmail.com</a>.
         </p>
-    </div></div>
-</div>
-
-<script>
-    appendFooter()
-</script>
+    </div>
+</section>
