--- a/pages/kamon.html
+++ b/pages/kamon.html
@@ -1,8 +1,8 @@
-<div class="section">
-    <div class="sub-section left img">
+<section>
+    <div class="half-section left">
         <img src="img/collection/kamon-1.jpg">
     </div>
-    <div class="sub-section right txt">
+    <div class="half-section right txt">
         <h1>1. Kamon — Family Crest</h1>
         <p>
             HNYA isn’t just a brand. It’s family.
@@ -14,13 +14,13 @@
             Designed by you. Representing you. Together with us.
         </p>
     </div>
-</div>
+</section>
 
-<div class="section">
-    <div class="sub-section right img">
+<section>
+    <div class="half-section right">
         <img src="img/collection/kamon-2.jpg">
     </div>
-    <div class="sub-section left txt">
+    <div class="half-section left">
         <h1>2. Digital Customized</h1>
         <p>
             Our brand is the new underground. We’re not supreme-ly boring or a club for anti-socials.
@@ -38,13 +38,13 @@
             <li>We will then send the digital design for confirmation.</li>
         </ol>
     </div>
-</div>
+</section>
 
-<div class="section">
-    <div class="sub-section left img">
+<section>
+    <div class="half-section left">
         <img src="img/collection/kamon-3.jpg">
     </div>
-    <div class="sub-section right txt">
+    <div class="half-section right">
         <h1>3. Our obsession to Quality allows us to choose only the best for the best.</h1>
         <p>
             * 52% Airlume combed and ring-spun cotton, 48% poly fleece
@@ -56,13 +56,13 @@
             * So soft, you won’t believe it’s not silk.
         </p><p>
     </div>
-</div>
+</section>
 
-<div class="section">
-    <div class="sub-section right img">
+<section>
+    <div class="half-section right">
         <img src="img/collection/kamon-4.jpg">
     </div>
-    <div class="sub-section left txt">
+    <div class="half-section left">
         <h1>
             4. Our commitment to quality, luxury, and tradition spills into our packaging.
         </h1>
@@ -76,20 +76,16 @@
             It extends to our one of a kind packaging as well.
         </p>
     </div>
-</div>
+</section>
 
-<div class="section">
-    <div class="sub-section left img">
+<section>
+    <div class="half-section left">
         <img src="img/collection/kamon-5.jpg">
     </div>
-    <div class="sub-section right txt">
+    <div class="half-section right">
         <h1>5. Join the family.</h1>
-        <p>
-            <a href="#store">Order Now.</a>
-        <p>
+        <h1>
+            <a href="#store">Order Now</a>
+        </h1>
     </div>
-</div>
-
-<script>
-    appendFooter()
-</script>
+</section>
