--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </aside>
         <a id="hdr-logo" href>HNYA</a>
         <nav id="hdr-nav">
-            <a href="#home">Home</a>
+            <a href>Home</a>
             <a href="#collection">Collection</a>
             <!-- <a href="#hnya">HNYA</a>
             <a href="#kamon">KAMON</a> -->
