--- a/pages/kamon.html
+++ b/pages/kamon.html
@@ -85,7 +85,7 @@
     <div class="half-section right">
         <h1>5. Join the family.</h1>
         <h1>
-            <a href="#store">Order Now</a>
+            <a href="#store" hover-underline>Order Now</a>
         </h1>
     </div>
 </section>
